<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:orientation="vertical"
                  tools:context=".view.activity.MainActivity"
    >
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/url"
                android:gravity="center"
        />

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:contentDescription="@string/string_content_description"
        />

        <Button
                android:id="@+id/btn_load_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_load_data"
        />

        <Button
                android:id="@+id/qr_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_qr_scan"
        />
        <Button
                android:id="@+id/select_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_select_img"
        />

    </LinearLayout>

    <com.ashokvarma.bottomnavigation.BottomNavigationBar
            android:id="@+id/bottom_navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"/>
</RelativeLayout>

